# image-classifier

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-mac.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
