[package]
name = "image-classifier"
version = "0.1.0"
description = "Image Auto Classifier"
authors = []
edition = "2021"

[lib]
name = "image_classifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "image-classifier"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }
walkdir = "2"
anyhow = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
